Fix benchmarks on newer JDKs
The benchmarks need to make Object.clone() accessible, so we have to
tell the JVM to open java.base/java.lang=ALL-UNNAMED.